Database is now a Component, also cleaned up some warnings