@@ -7,9 +7,12 @@ import com.naeayedea.keith.util.Utilities;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
+import java.sql.SQLException;
 import java.util.List;
 
 @Component
@@ -19,6 +22,8 @@ public class Ban extends AbstractAdminCommand {
 
     private final CandidateManager candidateManager;
 
+    private final Logger logger = LoggerFactory.getLogger(Ban.class);
+
     public Ban(ServerManager serverManager, CandidateManager candidateManager, @Value("${keith.commands.admin.ban.defaultName}") String defaultName, @Value("#{T(com.naeayedea.converter.StringToAliasListConverter).convert('${keith.commands.admin.ban.aliases}', ',')}") List<String> commandAliases) {
         super(defaultName, commandAliases);
         this.serverManager = serverManager;
@@ -27,7 +32,7 @@ public class Ban extends AbstractAdminCommand {
 
     @Override
     public String getShortDescription(String prefix) {
-        return prefix+getDefaultName()+": \"gives admins the ability to ban users/servers\"";
+        return prefix + getDefaultName() + ": \"gives admins the ability to ban users/servers\"";
     }
 
     @Override
@@ -37,35 +42,38 @@ public class Ban extends AbstractAdminCommand {
 
     @Override
     public void run(MessageReceivedEvent event, List<String> tokens) {
-        try{
-            String type = tokens.get(0);
+        try {
+            String type = tokens.getFirst();
             List<User> mentionedUsers = event.getMessage().getMentions().getUsers();
             String id;
-            if (mentionedUsers.size() > 0)
-                id = mentionedUsers.get(0).getId();
+            if (!mentionedUsers.isEmpty())
+                id = mentionedUsers.getFirst().getId();
             else
                 id = tokens.get(1);
             if (type.equals("user")) {
-                if (candidateManager.getCandidate(id).setAccessLevel(AccessLevel.ALL)) {
+                if (candidateManager.setAccessLevel(id, AccessLevel.ALL).isBanned()) {
                     event.getChannel().sendMessage("User banned").queue();
                 } else {
                     event.getChannel().sendMessage("couldn't ban user").queue();
                 }
-            } else if(type.equals("server") && candidateManager.getCandidate(event.getAuthor().getId()).getAccessLevel().num > 2){
+            } else if (type.equals("server") && candidateManager.getCandidate(event.getAuthor().getId()).getAccessLevel().num > 2) {
                 Guild guild = Utilities.getJDAInstance().getGuildById(id);
                 if (guild != null) {
-                    if (serverManager.getServer(guild.getId()).setBanned(true)) {
-                        event.getAuthor().openPrivateChannel().flatMap(channel -> channel.sendMessage("Successfully banned server id "+id+" contact succ to undo")).queue();
+                    if (serverManager.setBanned(guild.getId(), true).banned()) {
+                        event.getAuthor().openPrivateChannel().flatMap(channel -> channel.sendMessage("Successfully banned server id " + id + " contact succ to undo")).queue();
                     }
                 }
             } else {
                 event.getChannel().sendMessage("Command unsuccessful, try again").queue();
             }
-        }
-        catch (IndexOutOfBoundsException e) {
+        } catch (IndexOutOfBoundsException e) {
             event.getChannel().sendMessage("Insufficient arguments, try 'admin help ban' for more assistance").queue();
         } catch (IllegalArgumentException e) {
             event.getChannel().sendMessage("Invalid formatting, see admin help ban for more information").queue();
+        } catch (SQLException e) {
+            logger.error(e.getMessage(), e);
+
+            event.getChannel().sendMessage("Could not ban server due to SQL Issue.").queue();
         }
     }
 }
