@@ -1,8 +1,8 @@
 package com.naeayedea.keith.commands.message.admin.utilities;
 
 import net.dv8tion.jda.api.entities.Guild;
-import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.entities.User;
+import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -18,7 +18,7 @@ public class Locate extends AbstractAdminUtilsCommand {
 
     @Override
     public String getShortDescription(String prefix) {
-        return prefix+getDefaultName()+": \"Find a user or server\"";
+        return prefix + getDefaultName() + ": \"Find a user or server\"";
     }
 
     @Override
@@ -30,8 +30,8 @@ public class Locate extends AbstractAdminUtilsCommand {
     public void run(MessageReceivedEvent event, List<String> tokens) {
         MessageChannel channel = event.getChannel();
         if (tokens.size() > 1) {
-            String type = tokens.remove(0);
-            String id = tokens.remove(0);
+            String type = tokens.removeFirst();
+            String id = tokens.removeFirst();
             if (type.equals("server")) {
                 Guild server = event.getJDA().getGuildById(id);
                 if (server != null) {
@@ -42,7 +42,7 @@ public class Locate extends AbstractAdminUtilsCommand {
             } else if (type.equals("user")) {
                 User user = event.getJDA().getUserById(id);
                 if (user != null) {
-                    channel.sendMessage(user.getName()+"#"+user.getDiscriminator()).queue();
+                    channel.sendMessage(user.getName() + "#" + user.getDiscriminator()).queue();
                 } else {
                     channel.sendMessage("Could not find user").queue();
                 }
