@@ -6,11 +6,15 @@ import com.naeayedea.keith.model.Server;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.internal.entities.emoji.UnicodeEmojiImpl;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.concurrent.*;
 
 public class GuessDriver implements ChannelCommandDriver {
+
+    private static final Logger logger = LoggerFactory.getLogger(GuessDriver.class);
 
     private final ScheduledExecutorService timer;
 
@@ -45,11 +49,11 @@ public class GuessDriver implements ChannelCommandDriver {
     public void evaluate(Message message, List<String> args, Candidate candidate) {
         attempts++;
         try {
-            int guess = Integer.parseInt(args.get(0));
+            int guess = Integer.parseInt(args.getFirst());
             if (guess == answer) {
                 finish();
                 message.addReaction(new UnicodeEmojiImpl("\uD83C\uDF89")).queue();
-                channel.sendMessage("Congratulations! "+ candidate.getAsMention()+" You guessed correctly in "+attempts+" guesses! :tada:").queue();
+                channel.sendMessage("Congratulations! " + candidate.getAsMention() + " You guessed correctly in " + attempts + " guesses! :tada:").queue();
                 timerTask.cancel(true);
             } else if (guess < answer) {
                 message.addReaction(new UnicodeEmojiImpl("\u2B06")).queue();
@@ -66,16 +70,22 @@ public class GuessDriver implements ChannelCommandDriver {
             channel.sendMessage("There is already a game running in this channel! Simply type your guess into chat to play!").queue();
         } else {
             int timeout = 30;
-            channel.sendMessage("You have "+ timeout +" seconds to guess the number between 1 and "+maxNum+"!").queue();
+
+            channel.sendMessage("You have " + timeout + " seconds to guess the number between 1 and " + maxNum + "!").queue();
+
             answer = ThreadLocalRandom.current().nextInt(1, maxNum + 1);
+
             manager.addGame(channel.getId(), this);
+
             timerTask = timer.schedule(this::finishNoAnswer, timeout, TimeUnit.SECONDS);
-            System.out.println("started guess game, answer is "+answer);
+
+            logger.info("started guess game, answer is {}", answer);
         }
     }
 
     private void finishNoAnswer() {
-        channel.sendMessage("Game ended, the answer was "+answer+"! Use "+server.getPrefix()+"guess start [number] to start a new game!").queue();
+        channel.sendMessage("Game ended, the answer was " + answer + "! Use " + server.prefix() + "guess start [number] to start a new game!").queue();
+
         finish();
     }
 
