@@ -1,9 +1,9 @@
 package com.naeayedea.keith.managers;
 
-import com.naeayedea.keith.util.Utilities;
 import com.naeayedea.keith.model.chat.Chat;
 import com.naeayedea.keith.model.chat.ChatAgent;
 import com.naeayedea.keith.model.chat.ChatCandidate;
+import com.naeayedea.keith.util.Utilities;
 import jakarta.annotation.PreDestroy;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.*;
@@ -13,15 +13,19 @@ import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.internal.entities.emoji.UnicodeEmojiImpl;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
+@Component
 public class ServerChatManager {
 
     private final Map<Long, Chat> chats;
@@ -63,12 +67,12 @@ public class ServerChatManager {
             //get first result
             ChatCandidate connection = matchmaking.remove(matchmaking.keySet().iterator().next());
             matchmakingLock.unlock();
-            Guild linkedGuild = connection.getGuild();
-            MessageChannel linkedChannel = connection.getChannel();
+            Guild linkedGuild = connection.guild();
+            MessageChannel linkedChannel = connection.channel();
             createChat(channel, linkedChannel, false);
             //inform both channels of the new connection and advise of ability to not  send
-            channel.sendMessage(getConnectionMessage(linkedGuild.getName(), linkedChannel.getName(), serverManager.getServer(guild.getId()).getPrefix())).queue();
-            linkedChannel.sendMessage(getConnectionMessage(guild.getName(), channel.getName(), serverManager.getServer(linkedGuild.getId()).getPrefix())).queue();
+            channel.sendMessage(getConnectionMessage(linkedGuild.getName(), linkedChannel.getName(), serverManager.getServer(guild.getId()).prefix())).queue();
+            linkedChannel.sendMessage(getConnectionMessage(guild.getName(), channel.getName(), serverManager.getServer(linkedGuild.getId()).prefix())).queue();
             return true;
         }
     }
@@ -81,8 +85,8 @@ public class ServerChatManager {
     }
 
     private String getConnectionMessage(String guildName, String channelName, String prefix) {
-        return "Connection made with guild "+guildName+" in channel "+channelName+". Say Hi!" +
-                "\n\nYou can use "+prefix+" at the start of your message and it wont be sent!";
+        return "Connection made with guild " + guildName + " in channel " + channelName + ". Say Hi!" +
+            "\n\nYou can use " + prefix + " at the start of your message and it wont be sent!";
     }
 
     public void createChat(MessageChannel channelOne, MessageChannel channelTwo, boolean isFeedback) {
@@ -123,10 +127,10 @@ public class ServerChatManager {
         }
         //Check if the user has sent any embeds
         if (!message.getAttachments().isEmpty()) {
-            Message.Attachment attachment = message.getAttachments().get(0);
+            Message.Attachment attachment = message.getAttachments().getFirst();
             eb.setImage(attachment.getUrl());
         } else if (!message.getEmbeds().isEmpty()) {
-            MessageEmbed embed = message.getEmbeds().get(0);
+            MessageEmbed embed = message.getEmbeds().getFirst();
             String link = embed.getUrl();
             if (link != null) {
                 if (embed.getType().equals(EmbedType.IMAGE)) {
@@ -134,23 +138,23 @@ public class ServerChatManager {
                     content = content.replace(link, "");
                 } else {
                     try {
-                        URL firstLink = new URL(link);
+                        URL firstLink = (new URI(link)).toURL();
                         HttpURLConnection getVideo = (HttpURLConnection) firstLink.openConnection();
                         getVideo.setRequestMethod("GET");
                         getVideo.connect();
                         String videoURL = Utilities.getVideoURL(Utilities.readInputStream(getVideo.getInputStream()));
                         content = content.replace(link, "");
                         eb.setImage(videoURL);
-                    } catch (IOException ignored) {}
+                    } catch (IOException | URISyntaxException ignored) {}
                 }
             }
         }
         eb.setDescription(content);
         eb.setThumbnail(author.getAvatarUrl());
         if (isFeedback(id)) {
-            eb.setTitle("Feedback sent by " + author.getName() +" from "+name);
+            eb.setTitle("Feedback sent by " + author.getName() + " from " + name);
         } else {
-            eb.setTitle("Message sent by " + author.getName() +" from "+name);
+            eb.setTitle("Message sent by " + author.getName() + " from " + name);
         }
         getDestination(id).sendMessageEmbeds(eb.build()).queue(result -> message.addReaction(new UnicodeEmojiImpl("U+2709")).queue());
     }
